@@ -1,3 +1,8 @@
+2006-11-27  Ville Vainio  <vivainio@gmail.com>
+
+	* ipy_stock_completers.py: Clean up svn and hg completers
+	by using a common vcs_completer.
+
 2006-11-26  Ville Vainio  <vivainio@gmail.com>
 
 	* Remove ipconfig and %config; you should use _ip.options structure
